# genai-toolbox

./: .gitignore  README.md  pyproject.toml
src/: config.py  logger.py  main.py
src/api/endpoints/: agent.py  health.py
src/apis/: deps.py
src/apis/v1/: role_routes.py  tenant_routes.py  tenants_routes.py  user_routes.py
src/core/: cache.py  config.py  logging.py  security.py
src/db/: base.py  session.py
src/db/crud/: agent.py
src/db/models/: agent.py  permission.py  role.py  user.py
src/redis/: connection.py
src/schemas/: agent.py  role_schemas.py  tenant_schemas.py  user_schemas.py
src/services/: agent_service.py
src/utils/: tenant_util.py
tests/: test_main.py
