[project]
name = "genai-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "rich>=14.1.0",
    "sqlalchemy[asyncio]>=2.0.42",
    "uvicorn>=0.35.0",
]
